<resources>

    <string name="app_name">Agronitor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    nav bar     -->
    <string name="popup_description">popup menu</string>

    <!--   greenhouse popup_menu      -->
    <string name="greenhouse_settings">Greenhouse Settings</string>
    <string name="delete">Remove Greenhouse</string>

    <!--    popup_settings_menu     -->
    <string name="user_settings">User Settings</string>
    <string name="logout">Logout</string>

    <!--    bottom nav menu     -->
    <string name="stats">Stats</string>
    <string name="settings">Settings</string>
    <string name="automations">Automations</string>
    <string name="alarms">Alarms</string>

    <!--    greenhouse card-view    -->
    <string name="greenhouse_name">Greenhouse Name</string>

    <!--    add greenhouse button   -->
    <string name="add_greenhouse_btn_desc">Button to add new greenhouse</string>

    <!--    Login form  -->
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="no_account">Don\'t have an account?</string>

    <!--    Register form   -->
    <string name="register_email">Email*</string>
    <string name="register_username">Username*</string>
    <string name="register_password">Password*</string>
    <string name="register_confirm_password">Confirm Password*</string>

    <!--    Content Descriptions    -->
    <string name="app_title">App title</string>
    <string name="logo_image">Logo image</string>

    <!--    Stats Fragment     -->
    <string name="current_temp">Current Temperature:</string>
    <string name="current_humidity">Current Humidity:</string>
    <string name="current_soil_hydration">Current Soil Hydration:</string>
    <string name="current_uv_radiation">Current UV Radiation:</string>
    <string name="min">min:</string>
    <string name="max">max:</string>

    <!--    Empty Stats Fragment    -->
    <string name="empty_stats">There are no measurements yet</string>

    <!--    Alarms Fragment   -->
    <string name="set_temperature">Set temperature targets:</string>
    <string name="set_humidity">Set humidity targets:</string>
    <string name="set_soil">Set soil hydration targets:</string>
    <string name="set_min">min</string>
    <string name="set_max">max</string>
    <string name="activate_alarm">Activate alarm:</string>

    <!--    Settings Fragment  -->
    <string name="rename">Rename Greenhouse:</string>
    <string name="save">Save Changes</string>
    <string name="remove">Remove Greenhouse</string>

    <!--    titles      -->
    <string name="user_settings_title">User Settings</string>
    <string name="stats_title">Stats</string>
    <string name="automations_title">Automations</string>
    <string name="alarms_title">Alarms</string>
    <string name="greenhouse_settings_title">Greenhouse Settings</string>
    <string name="greenhouses_title">My Greenhouses</string>

    <!--    dialogs     -->
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>