<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context="RegisterActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/agro_guard_logo"
        android:contentDescription="@string/logo_image"
        android:layout_marginTop="45dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/register_email"
        android:nextFocusForward="@id/usernameTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/register_username"
        android:nextFocusForward="@id/passwordTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/register_password"
        android:nextFocusForward="@id/confirmPasswordTextInputLayout"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="60dp"
        android:hint="@string/register_confirm_password"
        android:nextFocusForward="@id/registerBtn"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/register_button"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/button_shape"/>

</LinearLayout>