<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TitleBarFragment">

    <LinearLayout
        android:id="@+id/titleBarLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="12"
        android:background="@color/green"
        android:gravity="center">

        <ImageView
            android:id="@+id/logoIV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/agronitor_logo"
            android:layout_weight="2"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/logo_image" />

        <TextView
            android:id="@+id/ViewName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_weight="8"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/popupMenuBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:background="@color/green"
            android:src="@drawable/navbar_menu_button"
            android:contentDescription="@string/popup_description" />

    </LinearLayout>

</FrameLayout>