<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ManagementActivity">

    <TextView
        android:id="@+id/fragmentNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/automations_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/alarmsLL"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/fragmentNameTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/setTempTargetsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Set temperature Targets:"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"/>

        <LinearLayout
            android:id="@+id/setTempTargetsLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:paddingHorizontal="20dp"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/setTempMinTL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/min"
                android:layout_weight="1"
                android:layout_marginEnd="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/setTempMinET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/setTempMaxTL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/max"
                android:layout_weight="1"
                android:layout_marginStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/setTempMaxET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"/>

        <TextView
            android:id="@+id/setHumidityTargetsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Set humidity Targets:"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>

        <LinearLayout
            android:id="@+id/setHumidityTargetsLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:paddingHorizontal="20dp"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/setHumidityMinTL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/min"
                android:layout_weight="1"
                android:layout_marginEnd="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/setHumidityMinET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/setHumidityMaxTL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/max"
                android:layout_weight="1"
                android:layout_marginStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/setHumidityMaxET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>